# AdventOfCode

./: .gitignore  AdventOfCode.sln  README.md
2015/: AdventOfCode_2015.sln
2015/Day03/: Day03.csproj  Program.cs
2015/Day04/: Day04.csproj
2015/Day05/: Program.cs
2015/Day07/: Day07.csproj
2015/Day08/: Day08.csproj  Program.cs
2015/Day09/: Day09.csproj  Program.cs
2015/Day1/: Day01.csproj
2015/Day10/: Program.cs
2015/Day13/: Day13.csproj
2015/Day15/: Program.cs
2016/: AdventOfCode2016.sln
2017/: AdventOfCode2017.sln
2018/: AdventOfCode.sln
2019/: AdventOfCode2019.sln
2019/Cli/: IDay.cs  (+4 more)
C/: CMakeLists.txt
C#/: AdventOfCode.sln  AdventOfCode.sln.DotSettings
C/src/: main.c
C/src/2015/: 2015.h  2015_day01.c  2015_day01.h  2015_day02.c  2015_day02.h
C/src/2019/: day01.c  day01.h  day02.c  day02.h  day05.c  day05.h  day07.c  day07.h  day09.c  day09.h
C/src/intcode_computer/: instruction.c  instruction.h  intcode_computer.c  intcode_computer.h
C/src/tests/: custom_assert.h  instruction_tests.h  intcode_computer_tests.h  tests.h
C/src/utility/: list.c  list.h  stringstream.c  stringstream.h
Day1/: Day1.csproj  Program.cs
Day10_MonoGame/: Day10_MonoGame.csproj  Game1.cs  Program.cs  app.manifest  problem.cs
Day11/: Day11.csproj  Program.cs
Day12/: Day12.csproj
Day13/: Day13.csproj  Program.cs
Day15/: Day15.csproj  Program.cs
Day2/: Day2.csproj  Program.cs
Day3/: Day3.csproj  Program.cs
Day4/: Day4.csproj  Program.cs
Day5/: Day5.csproj
Day6/: Program.cs
Day7/: Day7.csproj  Program.cs
Day8/: Program.cs
Day9/: Day9.csproj  Program.cs
Rust/: Cargo.toml
template/: Day8.csproj  Program.cs
(+670 files in other folders)
